# clion-remote

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.rst  Vagrantfile  provision.sh  rbuild.py  rdebug.py  rpython  vagrant.rst
doc/: docker.rst  python.rst
src/: greeting.cpp  hello.py  main.cpp
test/: CMakeLists.txt  test_greeting.cpp
test/src/: test_greeting.cpp
